only add covered matcher manually if a matcher does not exist SERVER-1742